--- a/manifest/1-secret_manifest.yaml
+++ b/manifest/1-secret_manifest.yaml
@@ -9,7 +9,7 @@ metadata:
     description: "mysql database credential"
 type: Opaque
 data:
-  database_name: bXlfZGF0YWJhc2U=
+  database_name: dG9kbwo=
   database_user: YWRtaW4=
-  database_password: Y3N2QHBhc3N3b3JkCg==
+  database_password: dG9kb0BwYXNzd29yZAo=
   database_root_password: cm9vdEBteXNxbAo=
