--- a/manifest/8-hpa.yaml
+++ b/manifest/8-hpa.yaml
@@ -2,8 +2,7 @@
 apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
-  name: myapp
-  namespace: default
+  name: perx
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
