--- a/minikube/mysql-values-minikube-ssl.yaml
+++ b/minikube/mysql-values-minikube-ssl.yaml
@@ -21,6 +21,12 @@ service:
   type: ClusterIP
   port: 3306 
 
+tls:
+  enabled: true
+  certFilename: tls.crt
+  certKeyFilename: tls.key
+  ca: ""
+  key: ""
 primary:
   startupProbe:
     enabled: true
@@ -37,16 +43,8 @@ primary:
     role: primary
   persistence:
     enabled: true
-    existingClaim: "mysql-master"
-  affinity:
-    nodeAffinity:
-      requiredDuringSchedulingIgnoredDuringExecution:
-        nodeSelectorTerms:
-          - matchExpressions:
-              - key: topology.kubernetes.io/zone
-                operator: In
-                values:
-                  - ap-south-1a
+    storageClass: standard
+    size: 8Gi
 
 volumePermissions:
   enabled: true
@@ -75,15 +73,7 @@ secondary:
     app: mysql
     role: secondary
   replicaCount: 1
-  affinity:
-    nodeAffinity:
-      requiredDuringSchedulingIgnoredDuringExecution:
-        nodeSelectorTerms:
-          - matchExpressions:
-              - key: topology.kubernetes.io/zone
-                operator: In
-                values:
-                  - ap-south-1b
   persistence:
     enabled: true
-    existingClaim: "mysql-slave"
+    size: 8Gi
+    storageClass: standard
